# Conversion

./: flake.nix  pyproject.toml
conversion/: __init__.py  conversionapp.py  main.py  supported.toml
tests/: test_main.py
tests/images/: test_images.py
