[tool.poetry]
name = "Conversion"
version = "0.1.0"
description = ""
authors = ["nulladmin1 <shrey.deogade@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


pillow = "^11.0.0"
[tool.poetry.group.dev.dependencies]
python = "^3.12"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
conversion = "conversion.main:main"
